--- a/style.css
+++ b/style.css
@@ -30,7 +30,8 @@ main {
 }
 
 .step-box:last-child {
-  margin-right: 0;
+  position: relative;
+  margin: 0 auto;
 }
 
 .step-img1 {
@@ -38,6 +39,7 @@ main {
   background-image: url(img/flow01.png);
   background-position: bottom;
   background-size: cover;
+  
 }
 
 .step-img2 {
@@ -45,6 +47,7 @@ main {
   background-image: url(img/flow02.png);
   background-position: bottom;
   background-size: cover;
+
 }
 
 .step-img3 {
@@ -83,6 +86,11 @@ footer {
     }
     .step-box {
         float: none;
-        width: 100%;
+        width: 90%;
+        margin: 0 auto;
+        margin-bottom: 20px;
     }
-  }
+    .step-box:last-child {
+       margin: 0 auto;
+    }
+}
